--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>NopPos</title>
+    <title>POS HomeABC</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
